<resources>
    <string name="app_name">Sunny Side Shuttle</string>

    <!--Left Fragment-->
    <string name="left_fragment_nav_title">MENU</string>

    <!--Splashscreen & on boarding page-->
    <string name="skip_btn">SKIP</string>
    <string name="title_boarding1">Easier To Travel</string>
    <string name="desc_boarding1">With Sunny Side Shuttle app, it is easier to travel around the cities.</string>
    <string name="title_boarding2">Travel at Ease With Us</string>
    <string name="desc_boarding2">Our shuttle will always prioritize your convenience, anywhere.</string>
    <string name="slide_next">SLIDE</string>

    <!--  login fragment  -->
    <string name="tv_login_title">Sunny Side Shuttle</string>
    <string name="et_login_username">username</string>
    <string name="et_login_password">password</string>
    <string name="btn_login">Login</string>

    <!--  landing page fragment  -->
    <string name="welcome">W E L C O M E,</string>
    <string name="landing_desc">Are you ready to start your journey with us?</string>
    <string name="letsBookBtn">Let\'s Book A Ticket !</string>

    <!--  book a ticket fragment  -->
    <string name="book_ticket_title">Book Shuttle Ticket</string>
    <string name="departing_city">Departing City </string>
    <string name="arrival_city">Arrival City</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="search_btn">Find</string>
    <string name="colon">:</string>

    <!--  Pembayaran fragment  -->
    <string name="tv_payment_header">Ticket Payment</string>
    <string name="tv_rute_body_content">Bandung to Jakarta</string>
    <string name="tv_tanggal_body_content">5-12-2021 08.00 AM</string>
    <string name="tv_mobil_body_content">small car</string>
    <string name="tv_fee_body_content">Fee @50.000</string>
    <string name="tv_jumlahTicket_body_content">2x tickets</string>
    <string name="tv_seat_body_content">(s1, s2)</string>
    <string name="tv_total_body_content">Rp.100.000</string>
    <string name="btn_confirm_payment">Confirm</string>

    <!--  Book Shuttle Ticket Fragment  -->
    <string name="tv_book_seat">Book Shuttle Ticket</string>
    <string name="tv_carType_seat">Car Type :</string>
    <string name="tv_pickSeat_seat">Pick Your Seat :</string>
    <string name="btn_continue_seat">Continue</string>

    <!--History fragment-->
    <string name="history_title">Payment History</string>
</resources>