<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--  Header  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_header_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="20dp"
            android:paddingLeft="15dp"
            android:text="@string/tv_payment_header"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/orange"/>
    </LinearLayout>

    <!--  Body  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/light_blue">

        <!--    Body Content    -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="215dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:orientation="vertical"
            android:background="@color/white">

            <!--     TextView Rute       -->
            <TextView
                android:id="@+id/tv_rute_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:text="@string/tv_rute_body_content"
                android:textSize="18sp"
                android:textColor="@color/medium_dark_blue"/>

            <!--     TextView Tanggal       -->
            <TextView
                android:id="@+id/tv_tanggal_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:text="@string/tv_tanggal_body_content"
                android:textSize="18sp"
                android:textColor="@color/medium_dark_blue"/>

            <!--     TextView Jenis Mobil       -->
            <TextView
                android:id="@+id/tv_mobil_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:text="@string/tv_mobil_body_content"
                android:textSize="18sp"
                android:textColor="@color/medium_dark_blue"/>

            <!--     TextView Jenis Mobil       -->
            <TextView
                android:id="@+id/tv_fee_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:text="@string/tv_fee_body_content"
                android:textSize="18sp"
                android:textColor="@color/medium_dark_blue"/>

            <!--      Horizontal Line      -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/medium_dark_blue"/>

            <!--     Relative Layout Body Content       -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!--       TextView Jumlah Tiket         -->
                <TextView
                    android:id="@+id/tv_jumlahTicket_payment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/tv_jumlahTicket_body_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/dark_blue"/>

                <!--       TextView Seat         -->
                <TextView
                    android:id="@+id/tv_ticketSeat_payment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/tv_seat_body_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/dark_blue"/>

                <!--       TextView Total         -->
                <TextView
                    android:id="@+id/tv_total_payment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/tv_total_body_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/dark_blue"/>
            </RelativeLayout>
        </LinearLayout>
        <Button
            android:id="@+id/btn_confirm_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="300dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/btn_confirm_payment"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:background="@drawable/orange_btn"/>
    </LinearLayout>
</LinearLayout>