<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_login_title"
            android:textAlignment="center"
            android:textSize="@dimen/tv_login_title_fontSize"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/et_login_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/et_login_marginTop"
            android:paddingTop="@dimen/et_login_paddingTop_paddingBottom"
            android:paddingBottom="@dimen/et_login_paddingTop_paddingBottom"
            android:paddingLeft="@dimen/et_login_paddingLeft"
            android:paddingRight="@dimen/et_login_paddingRight"
            android:hint="@string/et_login_username"
            android:textSize="@dimen/et_login_username_fontSize"
            android:textColor="@color/black"
            android:background="@drawable/border"/>
        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/et_login_marginTop"
            android:paddingTop="@dimen/et_login_paddingTop_paddingBottom"
            android:paddingBottom="@dimen/et_login_paddingTop_paddingBottom"
            android:paddingLeft="@dimen/et_login_paddingLeft"
            android:paddingRight="@dimen/et_login_paddingRight"
            android:hint="@string/et_login_password"
            android:textSize="@dimen/et_login_password_fontSize"
            android:textColor="@color/black"
            android:background="@drawable/border"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_login_marginTop"
            android:layout_gravity="center"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/btn_login_paddingLeft_paddingRight"
                android:paddingRight="@dimen/btn_login_paddingLeft_paddingRight"
                android:text="@string/btn_login"
                android:textAlignment="center"
                android:textSize="@dimen/btn_login_fontSize"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>