<?xml version="1.0" encoding="utf-8"?>
<!--in case aboleh pake constraint layout-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--container logo & menu skip-->
    <RelativeLayout
        android:id="@+id/top_bar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="5dp">

        <!--logo-->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/logo" />

        <!--App name-->
        <ImageView
            android:id="@+id/app_name"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/logo"
            android:src="@drawable/title"/>

        <!--skip button-->
        <Button
            android:id="@+id/skip_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/skip_btn"
            android:textColor="@color/dark_blue"
            android:background="@android:color/transparent"
            android:padding="0dp"/>
    </RelativeLayout>

    <!--Container content tengah-->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <!--image tengah-->
        <ImageView
            android:id="@+id/image"
            android:layout_width="390dp"
            android:layout_height="270dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/on_boarding_2" />

        <!--Title-->
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image"
            android:layout_centerHorizontal="true"
            android:fontFamily="serif"
            android:text="@string/title_boarding2"
            android:layout_marginTop="20dp"
            android:textColor="@color/dark_blue"
            android:textFontWeight="1000"
            android:textSize="23sp" />

        <!--Description-->
        <TextView
            android:id="@+id/desc"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:fontFamily="monospace"
            android:text="@string/desc_boarding2"
            android:textAlignment="center"
            android:textColor="@color/medium_dark_blue"
            android:textSize="15sp" />

    </RelativeLayout>

    <!--container bar bottom-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="23dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <!--Button hiasan back-->
        <Button
            android:id="@+id/boarding_back"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/left_arrow_dark_blue" />

        <!--Indikator page berapa-->
        <ImageView
            android:id="@+id/indicator"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/on_boarding_indicator2" />

        <!--Button hiasan next-->
        <Button
            android:id="@+id/boarding_next"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/right_arrow_dark_blue" />
    </RelativeLayout>
</RelativeLayout>